--- a/logo-order.html
+++ b/logo-order.html
@@ -9,12 +9,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
-  <title>2B-studios | Agentie de Web Design</title>
+  <title>Comanda Logo | 2Bstudio</title>
   <!-- script -->
-<script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/typed.js"></script>
   <script src="js/script.js"></script>
   <script src="js/smooth-scroll.js"></script>
@@ -76,32 +73,90 @@
     </div>
   </div>
 
+  <!-- Order Section -->
+
   <div class="custom-container pad">
-  <div rel="#website" class="check-id">
-     <h1>Coamda in 3 pasi!</h1>
+    <div rel="#website" class="check-id">
+
+      <!-- Order - Title+Subtitle -->
+      <h1>Mai avem nevoie de câteva informatii</h1>
+      <h6>Logo Design</h6>
       <form action="" class="order-form">
-       <div class="step first-section active-section">
-         <span class="blue">Pasul 1:</span>
-         <b>Date Personale:</b>
-         <a href="" class="btn next-step">Urmatorul Pas</a>
-       </div>
-       <div class="step second-section">
-         <span class="blue">Pasul 2:</span>
-         <b>Date Personale:</b>
-           <a href="" class="btn next-step">Urmatorul Pas</a>
 
-       </div>
+        <!-- Order - 1st Section -->
+        <div class="step first-section active-section">
+
+          <div id="step-title">
+            <span class="blue">Pasul 1:</span>
+            <b>Date Personale</b>
+          </div>
+
+          <!-- Order - inputs -->
+          <div class="data">
+            <h6>Nume Complet:</h6>
+            <input type="text" name="name" value="" placeholder="e.g Popescu Ioan">
+
+            <h6>Email*</h6>
+            <input type="text" name="email" value="" placeholder="nume@gmail.com" required >
+
+            <h6>Telefon</h6>
+            <input type="number" name="" value="">
+
+            <div id="check"><input type="checkbox" name="vehicle" value="Bike"> Am verificat ca toate datele sa fie introduse corect</div>
+
+          </div>
+
+          <a href="">Inapoi</a>
+          <a href="" class="order-btn next-step">Urmatorul Pas</a>
+
+        </div>
+
+        <!-- Order - 2nd Section -->
+        <div class="step second-section">
+
+          <div id="step-title">
+            <span class="blue">Pasul 2:</span>
+            <b>Informatii Logo</b>
+          </div>
+
+          <div class="logo-info">
+            <h6>Numele care sa apara in logo*</h6>
+            <input type="text" name="name" value="" placeholder="e.g Logo Company">
+
+            <h6>Slogan (daca exista)</h6>
+            <input type="text" name="email" value="" placeholder="e.g slogan" required>
+
+            <h6>Informatii despre compania ta</h6>
+            <textarea name="name" rows="3" cols="32"></textarea>
+          </div>
+
+          <a href="" class="order-btn next-step">Urmatorul Pas</a>
+
+        </div>
+
+        <!-- Order - 3rd Section -->
         <div class="step third-section">
-         <span class="blue">Pasul 3:</span>
-         <b>Date Personale:</b>
-            <a href="" class="btn next-step">Urmatorul Pas</a>
 
-       </div>
-     </form>
+          <div id="step-title">
+            <span class="blue">Pasul 3:</span>
+            <b>Aspect Logo</b>
+          </div>
+
+          <div class="logo-info">
+            <h6>Culori</h6>
+            <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc.">
+
+
+          </div>
+
+          <a href="" class="order-btn next-step">Finalizare</a>
+
+        </div>
+      </form>
+    </div>
+
+
   </div>
-
-
-</div>
 
 
 
