--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
               <h2>Ai nevoie de
                 <b class="type-wrap"></b>
               </h2>
-              <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
-                prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
-              a primi o oferta din partea noastra!</p>
+              <p><b>2B-studios</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis mollitia esse error consequatur tempore similique eos odit dignissimos atque voluptatem deserunt iure optio id, illo libero facilis neque labore excepturi!</p>
               <a href="" class="btn">COMANDA ACUM!</a>
             </div>
           </div>
