--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="favicon.ico">
     <title>2B-studios | Agentie de Web Design</title>
     <!-- script -->
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/typed.js"></script>
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
@@ -128,12 +128,12 @@
 
           <div class="col-md-6">
 
-            <div class="devices wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+            <div class="devices wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
               <img class="img-responsive" src="images/devices.png" alt="">
             </div>
           </div>
 
-          <div class="col-md-6 wow fadeInRight"  data-wow-duration="1s" data-wow-delay=".5s">
+          <div class="col-md-6 wow fadeInRight"  data-wow-duration="1s" data-wow-delay="0.3s">
 
             <!--Why Choose Us  -->
             <div class="choose-us-title">
@@ -144,7 +144,7 @@
             <div class="choose-us-des">
 
               <!--Choose us item 1  -->
-              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration="1s" data-wow-delay="1s">
                 <!-- choose us icon  -->
                 <div><i class="fas fa-pencil-alt"></i></div>
                 <!-- Choose us item title desc -->
@@ -153,7 +153,7 @@
               </div>
 
               <!--Choose us item 2  -->
-              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration="1s" data-wow-delay="1.5s">
                 <!-- choose us icon  -->
                 <div><i class="fas fa-stopwatch"></i></div>
                 <!-- Choose us item title desc -->
@@ -162,7 +162,7 @@
               </div>
 
               <!--Choose us item 3  -->
-              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s">
                 <!-- choose us icon  -->
                 <div><i class="far fa-money-bill-alt"></i></div>
                 <!-- Choose us item title desc -->
@@ -176,7 +176,57 @@
         </div>
       </div>
     </div>
+<div class="gray-bg">
+  <div class="custom-container pad">
+    <div class="testimonials_title">
+      Testimonials
+    </div>
+    <div class="testimonials-wrapper">
+   
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
+            <div class="img-wrapper">
+              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+            </div>
+            <div class="testimonial-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
+            </div>
+            <div class="testimonial-name">
+              BY LEONARDI DI CAPRIO
+              <b>GOOGLE</b>
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+            <div class="img-wrapper">
+              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+            </div>
 
+            <div class="testimonial-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
+            </div>
+            <div class="testimonial-name">
+              BY Antonio Banderas
+              <b>APPLE</b>        
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="2s">
+            <div class="img-wrapper">
+              <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
+            </div>
+            <div class="testimonial-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aliquam est cumque velit, quas voluptatem eos porro! Mollitia.
+            </div>
+            <div class="testimonial-name">
+              BY KIM 
+              <b>FACEBOOK</b>
+            
+            </div>
+            <a href="" class="btn blue-btn">Vezi proiect</a>
+          </div>
+        </div>
+  </div>
+</div>
     <div class="home-order">
       <div class="v-align">
         <h4>
@@ -192,6 +242,69 @@
         <div>
           <input type="submit" class="btn" value="continua" onclick="getOrder()">
         </div>
+      </div>
+    </div>
+    <div class="gray-bg">
+      <div class="custom-container pad">
+        <form action="" class="contact-us">
+          <b class="blue">
+            Contactează-ne!
+          </b>
+          <span class="nothing">
+            Salut, dacă ai vreo întrebare, nu ezita să ne scrii.  O să îți răspundem în cel mai scurt timp!
+          </span>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="element_label">
+                <span class="">Nume Complet*</span>
+                <input type="text">
+              </div>
+              <div class="element_label">
+                <span class="">Adresa Email</span>
+                <input type="text">
+              </div>
+              <div class="element_label">
+                <span class="">Numar Telefon</span>
+                <input type="text">
+              </div>
+            </div>
+            <div class="col-md-8">
+              <textarea name="" id=""></textarea>
+              <input type="submit" value="Trimite" class="btn blue-btn">
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="footer-wrapper">
+      <div class="custom-container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="social-media">
+              <a href="">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="">
+                <i class="far fa-envelope"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 right">
+            &copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            2B-studios. All Rights Reserved
+          </div>
+
+        </div>
+
       </div>
     </div>
 
