--- a/logo-order.html
+++ b/logo-order.html
@@ -94,13 +94,13 @@
           <!-- Order - inputs -->
           <div class="data">
             <h6>Nume Complet:</h6>
-            <input type="text" name="name" value="" placeholder="e.g Popescu Ioan">
+            <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
 
             <h6>Email*</h6>
-            <input type="text" name="email" value="" placeholder="nume@gmail.com" required >
+            <input type="text" name="email" value="" placeholder="nume@gmail.com" required class="inp">
 
             <h6>Telefon</h6>
-            <input type="text" name="" value="">
+            <input type="text" name="" value="" class="inp">
 
             <div id="check"><input type="checkbox" name="vehicle" value="Bike"> Am verificat ca toate datele sa fie introduse corect</div>
 
