--- a/logo-order.html
+++ b/logo-order.html
@@ -121,10 +121,10 @@
 
           <div class="logo-info">
             <h6>Numele care sa apara in logo*</h6>
-            <input type="text" name="name" value="" placeholder="e.g Logo Company">
+            <input type="text" name="name" value="" placeholder="e.g Logo Company" class="inp">
 
             <h6>Slogan (daca exista)</h6>
-            <input type="text" name="email" value="" placeholder="e.g slogan" required>
+            <input type="text" name="email" value="" placeholder="e.g slogan" required class="inp">
 
             <h6>Informatii despre compania ta</h6>
             <textarea name="name" rows="3" cols="32"></textarea>
@@ -144,7 +144,7 @@
 
           <div class="logo-info">
             <h6>Culori</h6>
-            <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc.">
+            <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
 
 
           </div>
