--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                         <a href="/">Ce facem?</a>
                       </li>
                       <li class="">
-                        <a href="/">Contact</a>
+                        <a href="#contact-us">Contact</a>
+                      </li>
+                      <li class="special-btn">
+                        <a href="/">Comanda</a>
                       </li>
                     </ul>
                   </div>
@@ -244,7 +247,7 @@
         </div>
       </div>
     </div>
-    <div class="gray-bg">
+    <div class="gray-bg" id="contact-us">
       <div class="custom-container pad">
         <form action="" class="contact-us">
           <b class="blue">
