--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,7 @@
   <!DOCTYPE html>
   <html lang="en">
-
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -11,13 +10,12 @@
     <link rel="icon" href="favicon.ico">
     <title>2B-studios | Agentie de Web Design</title>
     <!-- script -->
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-      <script src="js/typed.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/typed.js"></script>
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
     <script src="js/bootstrap.main.js"></script>
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -25,17 +23,19 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link rel='icon' href='images/favicon.ico' >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
   </head>
 
   <body>
-     <div class="container-top">
+    <div class="container-top">
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
             <a href="index.html">
               <img src="images/logo.png" alt="" class="initial-logo">
-              <img src="images/logo-nav.png" alt="" class="scrolled-nav">
+              <img src="images/logo-nav.png" alt="" class="scrolled-logo">
             </a>
           </div>
           <div id="main_nav">
@@ -62,7 +62,10 @@
                         <a href="/">Ce facem?</a>
                       </li>
                       <li class="">
-                        <a href="/">Contact</a>
+                        <a href="#contact-us">Contact</a>
+                      </li>
+                      <li class="special-btn">
+                        <a href="/">Comanda</a>
                       </li>
                     </ul>
                   </div>
