--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="logo">
             <a href="index.html">
               <img src="images/logo.png" alt="" class="initial-logo">
-              <img src="images/logo-nav.png" alt="" class="scrolled-nav">
+              <img src="images/logo-nav.png" alt="" class="scrolled-logo">
             </a>
           </div>
           <div id="main_nav">
