--- a/website-order.html
+++ b/website-order.html
@@ -1,80 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>2B-studios | Agentie de Web Design</title>
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/typed.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/smooth-scroll.js"></script>
+    <script src="js/bootstrap.main.js"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/default.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link rel='icon' href='images/favicon.ico' >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="favicon.ico">
-  <title>2B-studios | Agentie de Web Design</title>
-  <!-- script -->
-<script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-  <script src="js/typed.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/smooth-scroll.js"></script>
-  <script src="js/bootstrap.main.js"></script>
+  </head>
 
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="css/default.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/animate.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
-
-</head>
-
-<body>
-  <div class="container-top">
-    <div class="top-wrap">
-      <div class="custom-container">
-        <div class="logo">
-          <a href="index.html">
-            <img src="images/logo.png" alt="" class="initial-logo">
-            <img src="images/logo-nav.png" alt="" class="scrolled-nav">
-          </a>
-        </div>
-        <div id="main_nav">
-          <div id="nav">
-            <nav class="navbar navbar-default navbar-inverse">
-              <div class="container-fluid">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
+  <body>
+    <div class="container-top">
+      <div class="top-wrap">
+        <div class="custom-container">
+          <div class="logo">
+            <a href="index.html">
+              <img src="images/logo.png" alt="" class="initial-logo">
+              <img src="images/logo-nav.png" alt="" class="scrolled-logo">
+            </a>
+          </div>
+          <div id="main_nav">
+            <div id="nav">
+              <nav class="navbar navbar-default navbar-inverse">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                  </div>
+                  <div id="content_section_b" class="collapse navbar-collapse">
+                    <ul id="nav" class="dropdown nav navbar-nav">
+                      <li class="">
+                        <a href="about-us.html">Despre Noi</a>
+                      </li>
+                      <li class="">
+                        <a href="/">Portofoliu</a>
+                      </li>
+                      <li class="">
+                        <a href="/">Ce facem?</a>
+                      </li>
+                      <li class="">
+                        <a href="#contact-us">Contact</a>
+                      </li>
+                      <li class="special-btn">
+                        <a href="/">Comanda</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div id="content_section_b" class="collapse navbar-collapse">
-                  <ul id="nav" class="dropdown nav navbar-nav">
-                    <li class="">
-                      <a href="about-us.html">Despre Noi</a>
-                    </li>
-                    <li class="">
-                      <a href="/">Portofoliu</a>
-                    </li>
-                    <li class="">
-                      <a href="/">Ce facem?</a>
-                    </li>
-                    <li class="">
-                      <a href="/">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
   <div class="custom-container pad">
   <div rel="#website" class="check-id">
