--- a/website-order.html
+++ b/website-order.html
@@ -103,6 +103,37 @@
 
 
 </div>
+    <div class="footer-wrapper">
+      <div class="custom-container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="social-media">
+              <a href="">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="">
+                <i class="far fa-envelope"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 right">
+            &copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            2B-studios. All Rights Reserved
+          </div>
+
+        </div>
+
+      </div>
+    </div>
 
 
 
