--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="about-us.html">Despre Noi</a>
                       </li>
                       <li class="">
-                        <a href="/">Portofoliu</a>
+                        <a href="portfolio.html">Portofoliu</a>
                       </li>
                       <li class="">
                         <a href="/">Ce facem?</a>
@@ -186,7 +186,7 @@
     </div>
     <div class="testimonials-wrapper">
    
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
             <div class="img-wrapper">
               <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
             </div>
@@ -199,7 +199,7 @@
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
             <div class="img-wrapper">
               <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
             </div>
@@ -213,7 +213,7 @@
             </div>
             <a href="" class="btn blue-btn">Vezi proiect</a>
           </div>
-          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="2s">
+          <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="1.5s">
             <div class="img-wrapper">
               <img src="https://media.istockphoto.com/photos/smiling-businesswoman-over-gray-background-picture-id557608551?s=2048x2048" alt="">
             </div>
